# ani-rss

./: .gitignore  DOCKER.md  DOCS.md  Dockerfile.tpl  README.md  START.md  UPDATE.md  docker-compose.yml  ffmpeg-normalize-flow.md  native-package.sh  new_version.sh  package-win.sh  package.sh  pom.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-dmg.yml  build-test.yml  build.yml  delete-old-releases.yml  (+5 more)
ani-rss-api/: pom.xml
ani-rss-application/: generate-resources.sh  pom.xml
ani-rss-commons/: pom.xml
ani-rss-core/: pom.xml
ani-rss-domain/: pom.xml
ani-rss-rs/: Cargo.toml  README.md
ani-rss-rs/ani-rss-cli/: Cargo.toml
ani-rss-rs/ani-rss-cli/src/: main.rs
ani-rss-rs/ani-rss-cli/tests/: cli_tests.rs
ani-rss-rs/ani-rss-client/: Cargo.toml
ani-rss-rs/ani-rss-client/src/: endpoint.rs  lib.rs
ani-rss-rs/ani-rss-client/tests/: client_tests.rs
ani-rss-ui/: .gitignore  BgmOauthCallback.html  bgm-oauth-callback.html  index.html  package.json  pnpm-lock.yaml  pom.xml  vite.config.js
ani-rss-web/: pom.xml
docker/: Dockerfile  Dockerfile-arm32v7  Dockerfile-armv7  Dockerfile-native.tpl  Dockerfile-openj9  Dockerfile.tpl  docker-entrypoint.sh  exec.sh  run.sh  test-java.sh
docs/: BingSiteAuth.xml  CNAME  DOCKER.md  DOCS.md  START.md  baidu_verify_codeva-1BtiwxxWQ8.html  dev.md  docker.md  docs.md  faq.md  index.md  start.md  update.md
linux/: ani-rss.sh  install-ani-rss.sh  uninstall-ani-rss.sh
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
windows/: 删除开机自启动.bat  设置开机自启动.bat
(+756 files in other folders)
