[workspace]
members = [
    "ani-rss-client",
    "ani-rss-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["ani-rss contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
